Fetch config by keys and hierarchical config

--- a/ConfigurationExample/appsettings.json
+++ b/ConfigurationExample/appsettings.json
@@ -1,5 +1,9 @@
 {
   "MyKey": "My Value",
+  "WeatherApi": {
+    "ClientId": "TestClientId",
+    "ClientSecret": "TestClientSecret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
