Practice user secrets and custom json configuration file

--- a/ConfigurationExample/ConfigurationExample.csproj
+++ b/ConfigurationExample/ConfigurationExample.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8bd1c8b0-e138-484d-8a1d-e8009a1c8de2</UserSecretsId>
   </PropertyGroup>
 
 </Project>
