Complete the social media links excercise

--- a/ConfigurationExample/appsettings.json
+++ b/ConfigurationExample/appsettings.json
@@ -4,6 +4,12 @@
     "ClientId": "TestClientId",
     "ClientSecret": "TestClientSecret"
   },
+  "SocialMediaLinks":{
+    "Facebook": "http://www.facebook.com/app",
+    "Instagram": "http://www.instagram.com/app",
+    "Twitter": "http://www.twitter.com/app",
+    "Youtube": "http://www.youtube.com/app"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
